# api-gateway

./: Cargo.toml  RustProject.txt  todo.txt
crates/broker/: Cargo.toml
crates/broker/src/: lib.rs
crates/collab/: Cargo.toml
crates/collab/src/: broker_handlers.rs  domain_model.rs  lib.rs  use_cases.rs
crates/config/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: commands.rs  errors.rs  events.rs  lib.rs  traits.rs  types.rs
crates/domain/src/traits/: broker_port.rs  persistence_port.rs  user_port.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: auth.rs  lib.rs
crates/gateway/src/http/: handlers.rs  mod.rs  routes.rs
crates/gateway/src/ws/: mod.rs  socket_manager.rs  ws_handlers.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: lib.rs  schema.rs
crates/persistence/src/adapters/: mod.rs  mongodb_user_storage.rs  sql_storage.rs
docs/: ESTRUTURA_PROJETO.md
src/: main.rs
