[workspace]
members = [
    "crates/domain",
    "crates/broker",
    "crates/collab",
    "crates/persistence",
    "crates/gateway",
    "crates/config",
    "crates/metrics",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[package]
name = "gateway-bin"
version.workspace = true
edition.workspace = true

[[bin]]
name = "gateway"
path = "src/main.rs"

