[package]
name = "collab"
version.workspace = true
edition.workspace = true

[dependencies]
domain = { path = "../domain" }
broker = { path = "../broker" }
persistence = { path = "../persistence" }
config = { path = "../config" }
tracing = "0.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

