[package]
name = "gateway"
version.workspace = true
edition.workspace = true

[dependencies]
domain = { path = "../domain" }
broker = { path = "../broker" }
config = { path = "../config" }
tracing = "0.1"
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }

