[package]
name = "persistence"
version.workspace = true
edition.workspace = true

[dependencies]
domain = { path = "../domain" }
config = { path = "../config" }
mongodb = "2.8"
tracing = "0.1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

